syntax = "proto3";

package keyauth.user;
option go_package = "github.com/infraboard/keyauth/pkg/user";

import "pkg/user/pb/request.proto";
import "pkg/user/pb/user.proto";

// Service 用户服务
service UserService {
	// 查询用户
	rpc QueryAccount(QueryAccountRequest) returns(Set);
	// 获取账号Profile
	rpc DescribeAccount(DescribeAccountRequest) returns(User);
	// 创建用户
	rpc CreateAccount(CreateAccountRequest) returns(User);
	// 警用账号
	rpc BlockAccount(BlockAccountRequest) returns(User);
	// 警用账号
	rpc UnBlockAccount(UnBlockAccountRequest) returns(User);
	// DeleteAccount 删除用户
	rpc DeleteAccount(DeleteAccountRequest) returns(User);
	// 更新用户
    rpc UpdateAccountProfile(UpdateAccountRequest) returns(User);
    // 修改用户密码
	rpc UpdateAccountPassword(UpdatePasswordRequest) returns(Password);
	// GeneratePassword 生成符合检测强度的随机密码
	rpc GeneratePassword(GeneratePasswordRequest) returns(GeneratePasswordResponse);
}